--- a/usps/index.html
+++ b/usps/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
+    <!--Used to get the width-->
+    <meta name="viewport" content="width=device-width">
+    
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
