--- a/resume-demo/index.html
+++ b/resume-demo/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    
-    <!--Used to get the width-->
-    <meta name="viewport" content="width=device-width">
-    
-    <link rel="stylesheet" href="css/reset.css">
-    <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Resume of Eric Platzek</title>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <img src="img/mac.jpg" alt="Mac Computer">
-            <img src="img/aperture.png" alt="Photography">
-            <img src="img/pc.jpg" alt="PC">
-        </div>
-    </header>
-    <div id="hero"></div>
-    <main class="clearfix">
-     <div class="container">
-        <article>
+    <head>
+        <meta charset="UTF-8">
 
-            <object width="100%" height="1000" data="pdf/EricPlatzek_Resume_140929.pdf" type="application/pdf">
+        <!--Used to get the width-->
+        <meta name="viewport" content="width=device-width">
 
-              <p>It appears you don't have a PDF plugin for this browser.
-                  No biggie... you can <a href="myfile.pdf">click here to
-                  download the PDF file.</a></p>
+        <link rel="stylesheet" href="css/reset.css">
+        <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/styles.css">
+        <?php
+if ( (date('H') > 8) && (date('H') < 17))
+echo '<link rel="stylesheet" href="css/styles_day.css">';
+?>
+        <title>Resume of Eric Platzek</title>
+    </head>
+    <body>
+        <?php include("header.php"); ?>
 
-              </object>
-              <div class="fav-sites">
-                <ul><h2>Portfolio Sites</h2>
-                    <li><a href="http://ericplatzek.com/">Photography</a></li></li>
-                    <li><a href="http://eplatzek.github.io/fresno-munchies">FresnoMunchies</a></li>
-                    <li><a href="http://fresnotechtalent.info/eric-platzek/">Fresno Tech Talent Profile</a></li></li>
-                </ul> 
+        <div id="hero"></div>
+        <main class="clearfix">
+            <div class="container">
+                <article>
+
+                    <object width="100%" height="1000" data="pdf/EricPlatzek_Resume_140929.pdf" type="application/pdf">
+
+                        <p>It appears you don't have a PDF plugin for this browser.
+                            No biggie... you can <a href="myfile.pdf">click here to
+                            download the PDF file.</a></p>
+
+                    </object>
+                    <div class="php-time">
+                        <?php
+echo 'Now:       '. date('Y-m-d H:i:s') ."\n";
+?>
+                    </div>
+                    <div class="fav-sites">
+                        <ul><h2>Portfolio Sites</h2>
+                            <li><a href="http://ericplatzek.com/">Photography</a></li></li>
+                        <li><a href="http://eplatzek.github.io/fresno-munchies">FresnoMunchies</a></li>
+                        <li><a href="http://fresnotechtalent.info/eric-platzek/">Fresno Tech Talent Profile</a></li></li>
+                    </ul> 
             </div>
-        </article>
+            </article>
 
         <div class = "white-box">
             E-mail Address:<input type="text" name="Address"><br>
@@ -46,33 +50,33 @@
             <input type="submit" value="Submit">
         </div>
         <div class = "white-box">
-         <p>What is your favorite color:</p>
-         <form action="">
-            <input type="radio" name="color" value="red">Red
-            <input type="radio" name="color" value="white">White
-            <input type="radio" name="color" value="blue">Blue
+            <p>What is your favorite color:</p>
+            <form action="">
+                <input type="radio" name="color" value="red">Red
+                <input type="radio" name="color" value="white">White
+                <input type="radio" name="color" value="blue">Blue
             </form>
         </div>
         <div class = "white-box">
             Family:
             <table style="width:100%">
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Age</th>
-            </tr>
-              <tr>
-                <td class="first-name">Jill</td>
-                <td class="last-name">Smith</td> 
-                <td>50</td>
-            </tr>
-            <tr>
-                <td class="first-name">Eve</td>
-                <td class="last-name">Jackson</td> 
-                <td>94</td>
-            </tr>
-        </table>
-    </div>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Age</th>
+                </tr>
+                <tr>
+                    <td class="first-name">Jill</td>
+                    <td class="last-name">Smith</td> 
+                    <td>50</td>
+                </tr>
+                <tr>
+                    <td class="first-name">Eve</td>
+                    <td class="last-name">Jackson</td> 
+                    <td>94</td>
+                </tr>
+            </table>
+        </div>
         <div class = "white-box">
             <ol><h3>To Do:</h3>
                 <li>Find out what you love</li>
@@ -86,16 +90,23 @@
         </div>
 
         <div class = "white-box">
-            Text:
-        <?php
-            echo 'Now:       '. date('Y-m-d') ."\n";
-            ?>
+            <strong> MySQL Query</strong><br>
+            <code>SELECT concat(first_name," ",last_name) AS Fullname, Number_of_web_qual FROM ( SELECT users.user_id, first_name,last_name, sum(case when qual_category Like "web design%" THEN 1 ELSE 0 END) AS Number_of_web_qual FROM users INNER JOIN qualifications ON users.user_id=qualifications.user_id GROUP by users.user_id) as table1 ORDER by Number_of_web_qual desc;</code>
         </div>
 
         <div class = "white-box">
-            <strong> MySQL Query</strong><br>
-            <code>SELECT concat(first_name," ",last_name) AS Fullname, Number_of_web_qual FROM ( SELECT users.user_id, first_name,last_name, sum(case when qual_category Like "web design%" THEN 1 ELSE 0 END) AS Number_of_web_qual FROM users INNER JOIN qualifications ON users.user_id=qualifications.user_id GROUP by users.user_id) as table1 ORDER by Number_of_web_qual desc;</code>
-        <div>
+            <?php if (!empty($_POST)): ?>
+            First Name is: <?php echo htmlspecialchars($_POST["fname"]); ?>!<br>
+            Last Name is: <?php echo htmlspecialchars($_POST["lname"]); ?>.<br>
+            <?php else: ?>
+            <form action=<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?> method="post">
+            Name: <input type="fname" name="fname"><br>
+            Email: <input type="lname" name="lname"><br>
+            <input type="submit">
+            </form>
+        </div>
+    <?php endif; ?>
+
     </article>
 </div>
 </main>
