--- a/flexbox/index1_media_140930.html
+++ b/flexbox/index1_media_140930.html
@@ -17,6 +17,14 @@
             <h1>I'm the Headline</h1>
         </div>
 
+       <nav>
+            <ul class="clearfix">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">products</a></li>
+                <li><a href="#">contact us</a></li>
+            </ul>
+        </nav>
         <div class="centerArticleAndClass">
             <article class="clearfix">
                 Tart halvah chupa chups danish cake sugar plum bear claw cake. Jelly beans dessert jelly-o. Chocolate lollipop oat cake donut. Pastry halvah sesame snaps pudding. Marzipan liquorice pie. Ice cream jelly beans tiramisu pie candy topping. Sesame snaps bear claw cheesecake lollipop marshmallow chocolate cake unerdwear.com pie. Icing icing carrot cake. Tart cupcake muffin tiramisu soufflé cookie tart. Danish applicake cookie applicake cupcake candy canes. Chocolate apple pie bonbon 
