--- a/usps-scss/index.html
+++ b/usps-scss/index.html
@@ -8,7 +8,7 @@
     
     <title>Document</title>
     <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     
 </head>
 <body>
