Minor Aeronaut tweaks

--- a/aeronaut/index.html
+++ b/aeronaut/index.html
@@ -51,18 +51,17 @@
 
         <div class="mid-page">
             <div id="hero">
-                <img src="img/heros/DSC05210.jpg" alt="Brewing Equipment">
+                <img src="img/heros/DSC05209.jpg" alt="Brewing Equipment">
             </div>
             <div class="side-section">
                 <div class="hours">
                     <P>TAPROOM HOURS:</P>
                     <P>Weds - Friday: 5-11PM</P>          <P>Saturday:2-11PM</P>
-                    <P>(617) 718-0602</P>
-                </div>
+We are:                    </div>
                 <div class=" location">
                     <P>14 TYLER STREET</P>
                     <P>SOMERVILLE, MA</P>
-                </div>
+<tel>(617)-718-0602</tel>                </div>
             </div>
         </div> <!--End of Mid Page-->
         <div class="bottom-page">
@@ -83,8 +82,7 @@
             http://blog.aeronautbrewing.com/
         </div>
         <footer> 
-            <div class="container">
-                Copyright &copy 2014 Eric Platzek & Aeronaut Brewery
+            <div class="container">      Copyright &copy 2014 Eric Platzek & Aeronaut Brewery
             </div>
         </footer>
     </body>
