Flexbox Image Tweaks completed

--- a/aeronaut/index.html
+++ b/aeronaut/index.html
@@ -44,8 +44,7 @@
                 <nav>
                     <ul class="clearfix">
                         <li><a href="#">home</a></li>
-                        <li><a href="#">contact us</a></li>
-                        <li><a href="#">beer</a></li>
+                        <li><a href="#contact">contact us</a></li>
                         <li><a href="http://tbdbrew.us5.list-manage.com/subscribe?u=91e98c559967a7bab33998646&id=9d685ed599">Newsletter</a></li>
                     </ul>
                 </nav>
@@ -59,7 +58,7 @@
             </div>
             <div class="side-section">
                 <div class="hours">
-                    <P>TAPROOM HOURS:</P>
+                    <P><u>TAPROOM HOURS</u>:</P>
                     <P>Weds - Friday: 5-11PM</P>          <P>Saturday:2-11PM</P>
                 </div>
                 
@@ -68,7 +67,7 @@
                 <div class="location">
                     <a href='http://maps.google.com/maps?daddr=42.381443731437365,-71.10440611839294'><P>14 TYLER STREET</P>
                         <P>SOMERVILLE, MA</P></a>
-
+                    <hr>
                     <a href="tel:+16177180602">(617)-718-0602</a>
                 </div>
                     
@@ -101,7 +100,7 @@
                 </div>
             </div> 
             <div class="bottom-page">
-            <div class="contact-us">
+            <div class="contact-us"><a name="contact"></a>
                 <!-- Do not change the code! -->
                 <a class="form" id="foxyform_embed_link_587154" href="http://www.foxyform.com/"></a>
                 <script type="text/javascript">
