Fixed fresno munchies
Solo.png and Pretezels.jpg has the wrong capitalization. This would
render will in testing but not on live sites.

--- a/fresno-munchies/index_orders.html
+++ b/fresno-munchies/index_orders.html
@@ -75,7 +75,7 @@
 				</div>
 
 				<div class="box">
-					<img src="images/menu_items/solo.png">
+					<img src="images/menu_items/Solo.png">
 					<span class=" fade-caption">
 						<h3>Solo Cups</h3>
 						<p>$1.99</p>
@@ -99,7 +99,7 @@
 				</div>
 
 				<div class="box">
-					<img src="images/menu_items/pretzels.jpg">
+					<img src="images/menu_items/Pretzels.jpg">
 					<span class=" fade-caption">
 						<h3>Pretzels</h3>
 						<p>$3.99</p>
