--- a/aeronaut/index.html
+++ b/aeronaut/index.html
@@ -23,11 +23,8 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
         <header>
-            <div class="pre-nav">
-                <div id="media-spacer">               
-                </div>
-
-                <div id="media-links">
+           
+            <div class="float-media">
                     <a href="https://twitter.com/AeronautBrewing"><img src="img/social-media/Waterdrop%20Icons%2048px%20(5)%20-twit.png"></a>
                     <a href="https://www.facebook.com/aeronautbrewing#"><img src="img/social-media/Waterdrop%20Icons%2048px%20(6)%20-%20fb.png"></a>
                     <a href="http://www.yelp.com/biz/aeronaut-brewing-company-somerville"><img src="img/social-media/Waterdrop%20Icons%2048px%20(63)%20-%20yelp.png"></a>
@@ -35,8 +32,8 @@
 
                     <a href="https://foursquare.com/v/aeronaut-brewing-company/52a1da9d11d2623b045bd2a0"><img src="img/social-media/Waterdrop%20Icons%2048px%20(5)%20-4sPink.png"></a>
                     <a href="http://maps.google.com/maps?daddr=42.381443731437365,-71.10440611839294"><img src="img/social-media/Waterdrop%20Icons%2048px%20(5)%20-nav.png"></a>       
-                </div>           
-            </div><!-- end of pre-nav-->
+                </div>   <!--End of Floating--> 
+           
             <div class="logo-and-nav">
                 <div class="logo">
                     <img src="img/wordmark.svg" alt="Aeronaut Brewery Website Logo">
