--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <title>Document</title>
     <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Playfair+Display:900' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:900' rel='stylesheet' type='text/css'>
     <script src="cards.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="buttonHolder">
