--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:900' rel='stylesheet' type='text/css'>
-    <script src="cards.js"></script>
+    <script src="cardsOOD.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
@@ -19,13 +19,13 @@
 </div>
 
 <div id="dealer">
-    Dealer:<br/>
+    <span class="subheader">Dealer:</span><br/>
     <div class="card1">X</div>
     <div class="card2">X</div>
 </div>
     
 <div id="player">
-    Player:<br/>
+    <span class="subheader">Player:</span><br/>
     <div class="card1">X</div>
     <div class="card2">X</div>
 </div>
