--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Simply 21</title>
     <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
@@ -10,6 +10,7 @@
     <script src="cardsOOD.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="buttonHolder">
