--- a/js2/day4.html
+++ b/js2/day4.html
@@ -41,14 +41,14 @@ Day 4: Angular!!
 	<li>Angular
         <ul>
             <li>What is it?</li>
-            <img scr="http://eplatzek.github.io/js2/imgs/curve.jpg" style="width:345px;height:146px;">
+            <img src="imgs/curve.jpg" style="width:345px;height:146px;">
             <li>Why use AngularJS</li>
             <li>Model, View, Controller?</li>
             <li>Features</li>        <li>https://docs.angularjs.org/tutorial</li>
         </ul>
     </li>
     <li>Example:<br/>
-    <img scr="http://eplatzek.github.io/js2/imgs/basicExample.png" style="width:649px;height:395px;">
+    <img src="imgs/basicExample.png" style="width:649px;height:395px;">
 
     </li>
     <li>Download and follow template as we work through it:<br/>https://github.com/eplatzek/angtutorial
