JS2 - Added more to day2

--- a/js2/index.html
+++ b/js2/index.html
@@ -37,7 +37,7 @@
       </div>
     </nav>    
 Welcome<br/> 
-We are Eric Platzek (ericplatzek@gmail.com) and Arturo Ceballos (aceballos118@gmail.com )
+    We are Eric Platzek (ericplatzek@gmail.com) and Arturo Ceballos (aceballos118@gmail.com )<br/>
 Day 1: Review
 <ul>
 	<li>Variables
@@ -114,8 +114,8 @@ Day 1: Review
             </li>
         </ul>
     </li>
-    <li>DOM Selector and replacement<ul><li><xmp>var div = document.querySelector('#changeMe');<br/>
-div.innerHTML = '<p>Now i have an input element too!</p>
+    <li>DOM Selector and replacement<ul><li><xmp>var myElement = document.querySelector('#changeMe');<br/>
+myElement.innerHTML = '<p>Now i have an input element too!</p>
 <input type="text"/>';
 </xmp>
         </li>
