JS2 - Added more to Day 3

--- a/js2/day5.html
+++ b/js2/day5.html
@@ -42,8 +42,9 @@ Day 5: Mongo DB
         <ul>
             <li>Keys and Data</li>
             <li>Differrent Databases</li>
-            <li>JSON data vs MongoDB JSON Data</li>
+            <li>JSON Data</li>
             <li>Set your MongoLab account</li> 
+            <li>Follow this tutorial: <a href="http://openmymind.net/mongly/">Interactive Tutorial</a></li>
             </li>
         </ul>
     </li>
