--- a/js2/day8.html
+++ b/js2/day8.html
@@ -5,51 +5,20 @@
     <title>Day 8</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="js/navbar.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">JavaScript 2</a>
-      </div>
-      <div>
-        <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Days 
-              <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                
-                <li><a href="index.html">Day 1: Review</a></li>
-                <li><a href="day2.html">Day 2: Arrays</a></li>
-                <li><a href="day3.html">Day 3: Objects</a></li>
-                <li><a href="day4.html">Day 4: Angular!!</a></li>
-                <li><a href="day5.html">Day 5: Mongo DB</a></li>
-                <li><a href="day6.html">Day 6: Mid Terms (Coding Challenge)</a></li>
-                <li><a href="day7.html">Day 7: Mid Terms (Presenting)</a></li>
-                <li class="active"><a href="day8.html">Day 8: Routing</a></li>
-                <li><a href="day9.html">Day 9,10,11,12: TBA</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>    
-Day 8: Routing
+<nav id="myJS2Nav" class="navbar navbar-inverse"></nav> 
+Day 8: Mid Terms
 <ul>
-	<li>Routing
+	<li>Present your solutions !!
         <ul>
-            <li>App.route Routing</li>
-            <li>Routing with NodeJS</li>
+            <li>Difficulties</li>
+            <li>Suggestions and Improvement</li>
         </ul>
+    </li>
 </ul>
-
-<ol>Coding Challenge<br/>
-You may start from scratch or use your midterm solution as a starting point<br/><br/>
-    <li>First Challenge: Have a page which repreats some json data (Maybe high score or a photo gallery)</li>
-    <li>Second Challenge: If one JSON object on this page is selected we will route to a detail page for that json object <br/> 
-    </li> 
-</ol>
 </body>
 </html>
