--- a/js2/day10.html
+++ b/js2/day10.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Day 9</title>
+    <title>Days 10,11,12</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -11,20 +11,16 @@
 </head>
 <body>
 <nav id="myJS2Nav" class="navbar navbar-inverse"></nav>    
-Day 9: Routing
-<ul>
-	<li>Routing
+Days 10,11,12: TBA 
+<ul>    
+    <li>Likely Topics
         <ul>
-            <li>App.route Routing</li>
-            <li>Routing with NodeJS</li>
+            <li>JQuery</li>
+            <li>Final Project</li>
+            <li>Regular Expression</li> 
+            <li>User Accounts</li>
         </ul>
-</ul>
-
-<ol><b>Coding Challenge</b><br/>
-You may start from scratch or use your midterm solution as a starting point<br/><br/>
-    <li>First Challenge: Have a page which repreats some json data (Maybe high score or a photo gallery)</li>
-    <li>Second Challenge: If one JSON object on this page is selected we will route to a detail page for that json object <br/> 
-    </li> 
-</ol>
+    </li>
+</ul>    
 </body>
 </html>
