JS2 - Updated Day 5

--- a/js2/day5.html
+++ b/js2/day5.html
@@ -62,8 +62,9 @@ Day 5: Mongo DB
             <li>Install mongodb by using node packet manager: npm install mongodb</li>
             <li>Copy the node example from here: https://github.com/mongolab/mongodb-driver-examples/blob/master/nodejs/nodeSimpleExample.js</li>
             <li>Update with your URI info</li>
-            <li>Run file</li>
-            <li>Comment out Lines 85-91 (this code deletes the tables)</li>
+            <li>Run file using: node nodeSimpleExample.js</li>
+            <li>Comment out Lines 85-91 (this code deletes the tables) and run it again</li>
+            <li>Check your mongoLab Collections</li>
         </ol>
     </li>
 </ul>
