JS2: Updated Days 1-8

--- a/js2/day3.html
+++ b/js2/day3.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav id="myJS2Nav" class="navbar navbar-inverse"></nav>        
-Review of Day 2's assignments
+Day 3: Review of Day 2's assignments
 <ul>    
 </ul>    
 </body>
