--- a/js2/day7.html
+++ b/js2/day7.html
@@ -11,12 +11,27 @@
 </head>
 <body>
 <nav id="myJS2Nav" class="navbar navbar-inverse"></nav>      
-Day 7: Mid Terms (Coding Challenge)
+Day 7: Angular!!
+<ul>
+	<li>Angular
+        <ul>
+            <li>What is it?</li>
+            <img src="imgs/curve.jpg" style="width:345px;height:146px;">
+            <li>Why use AngularJS</li>
+            <li>Model, View, Controller?</li>
+            <li>Features</li>        <li>https://docs.angularjs.org/tutorial</li>
+        </ul>
+    </li>
+    <li>Example:<br/>
+    <img src="imgs/basicExample.png" style="width:649px;height:395px;">
+
+    </li>
+    <li>Download and follow template as we work through it:<br/>https://github.com/eplatzek/angtutorial
+    </li>
+</ul>
+
 <ol><b>Coding Challenge</b><br/>
-    Chose A, B or C<br/>
-    <li>Challenge A: Create a simple game using dom manipulation</li>
-    <li>Challenge B: Create a angular app which uses CRUD</li>
-    <li>Challenge C: Create a game which saves some data in a MongoDB datbase. </li> 
+No Challenge, Just follow along
 </ol>
 </body>
 </html>
