--- a/js2/day6.html
+++ b/js2/day6.html
@@ -5,33 +5,15 @@
     <title>Day 6</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="js/navbar.js"></script>
+  
 </head>
 <body>
-<nav id="myJS2Nav" class="navbar navbar-inverse"></nav>      
-Day 6: Angular!!
-<ul>
-	<li>Angular
-        <ul>
-            <li>What is it?</li>
-            <img src="imgs/curve.jpg" style="width:345px;height:146px;">
-            <li>Why use AngularJS</li>
-            <li>Model, View, Controller?</li>
-            <li>Features</li>        <li>https://docs.angularjs.org/tutorial</li>
-        </ul>
-    </li>
-    <li>Example:<br/>
-    <img src="imgs/basicExample.png" style="width:649px;height:395px;">
-
-    </li>
-    <li>Download and follow template as we work through it:<br/>https://github.com/eplatzek/angtutorial
-    </li>
-</ul>
-
-<ol><b>Coding Challenge</b><br/>
-No Challenge, Just follow along
-</ol>
+<nav id="myJS2Nav" class="navbar navbar-inverse"></nav>        
+Day 6: Continue installing Mongo and NodeJS & Practice Database Manipulation.
+<ul> 
+</ul>    
 </body>
 </html>
