--- a/js2/day7.html
+++ b/js2/day7.html
@@ -27,6 +27,7 @@ Day 7: Angular!!
 
     </li>
     <li>Download and follow template as we work through it:<br/>https://github.com/eplatzek/angtutorial
+    Note: This demo template by Code Academy's tutorial (https://www.codecademy.com/en/courses/learn-angularjs/lessons/your-first-app/exercises/your-first-app-hello-angularjs-i) 
     </li>
 </ul>
 
