Remove unused scss

--- a/war/index.html
+++ b/war/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <div class="buttonHolder">
-    <button type="button" class="deal" onclick="dealMe()">DEAL</button>
+    <button type="button" class="deal" onclick="init()">DEAL</button>
+    <div class="results"></div>
 </body>
 </html>
