--- a/war/index.html
+++ b/war/index.html
@@ -18,7 +18,7 @@
     <span class="playerTitle"> Players:
       <input class="playerCount" id="input" type="number" value="2" min="2" max="52"></input>
     </span>
-    <button type="button" class="deal" onclick="init()">Deal</button>
-    <div class="results"></div>
+    <button type="button" class="deal" onclick="startGame()">Deal</button>
+    <div class="results" id="results"></div>
 </body>
 </html>
