Add source link

--- a/war/index.html
+++ b/war/index.html
@@ -19,6 +19,7 @@
       <input class="playerCount" id="input" type="number" value="2" min="2" max="52"></input>
     </span>
     <button type="button" class="deal" onclick="startGame()">Deal</button>
+    <a href='https://github.com/eplatzek/eplatzek.github.io/tree/war/war'>Source</a>
     <div class="results" id="results"></div>
 </body>
 </html>
